2000-12-05  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtrack/Makefile (DOCBITMAPS): Add *.png.
	* doc/design/qmtrack/web-gui-states.dia: New file.
	* doc/design/qmtrack/web-gui-states.png: Likewise.
	* doc/design/qmtrack/concepts.xml: Add categories section.
	* doc/design/qmtrack/idb-impl.xml: Edit.
	* doc/design/qmtrack/triggers.xml: Explain get triggers better.
	* doc/design/qmtrack/user-interface.xml: Expand.
	
2000-12-04  Alex Samuel  <samuel@codesourcery.com>

	* doc/qm.mod: New file.
	* doc/design/qmtest/qmtest.xml: Don't declare phrase entities.
	Incorporate qm.mod.
	* doc/design/qmtrack/qmtrack.xml: Likewise.
	* doc/design/qmtrack/introduction.xml: Add link.
	* doc/design/qmtrack/user-interface.xml: Fix entity.  Fix ulink.
	* doc/design/qmtrack/xml-repr.xml: Improve example.

2000-12-04  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtrack/concepts.xml: Edit.  Add ids.
	* doc/design/qmtrack/idb-impl.xml: Likewise.
	* doc/design/qmtrack/implementation.xml: Likewise.
	* doc/design/qmtrack/introduction.xml: Likewise.
	* doc/design/qmtrack/requirements.xml: Likewise.
	* doc/design/qmtrack/xml-impl.xml: Likewise.
	
2000-12-04  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk (HTMLINDEX): New macro.
	(PRINTDIR): Likewise.
	(PRINTTEX): Likewise.
	(PRINTPDF): Likewise.
	(html-dir): Remove target.
	(html-output): Likewise.
	(html-graphics): Likewise.
	($(HTMLINDEX)): New target.
	($(HTMLMANIFEST)): Likewise.
	($(HTMLTARBALL)): Change dependencies.
	(docbook-print): Remove target.
	($(PRINTTEX)): New target.
	($(PRINTPDF)): Likewise.
	(%.html): Likewise.
	
	* doc/design/qmtrack/qmtrack.xml (dtml): New entity.
	(implementation.xml): Likewise.
	(idb-api.xml): Remove entity.
	Add authors.
	* doc/design/qmtrack/concepts.xml: Include triggers and
	user interface sections.
	* doc/design/qmtrack/idb-api.xml: Rename to...
	* doc/design/qmtrack/implementation.xml: ... this.  Add trigger
	API.  Include IDB implementation section.